--- a/src/app.scss
+++ b/src/app.scss
@@ -22,13 +22,13 @@ body {
   // margin: 50px auto;
 }
 
-.aside__title,
+.spoiler__title,
 .header,
 .main {
   padding: 40px;
 }
 
-.aside__title,
+.spoiler__title,
 .main__title {
   font-size: 2rem;
   font-weight: 600;
