--- a/src/app.scss
+++ b/src/app.scss
@@ -37,3 +37,52 @@ body {
 .removeBtn {
   cursor: pointer;
 }
+
+.greenBtn {
+  height: 55px;
+  background-color: #9dd558;
+  border-radius: 18px;
+  border: 0;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.1s ease-in-out;
+  position: relative;
+
+  &:hover {
+    background-color: lighten(#9dd558, 10%);
+
+    .arrow-right {
+      transform: translateX(5px);
+    }
+
+    .arrow-left {
+      transform: translateX(-5px) rotateY(180deg);
+    }
+  }
+
+  &:active {
+    background-color: darken(#9dd558, 5%);
+  }
+
+  &:disabled {
+    background-color: #bebebe;
+    cursor: default;
+  }
+
+  img {
+    position: absolute;
+    top: 21.5px;
+    transition: transform 0.2s ease-in-out;
+    width: 14px;
+    height: 12px;
+  }
+
+  .arrow-right {
+    right: 30px;
+  }
+  .arrow-left {
+    left: 30px;
+  }
+}
