--- a/src/comps/cart/cart.module.scss
+++ b/src/comps/cart/cart.module.scss
@@ -17,40 +17,6 @@
   }
 }
 
-.greenBtn {
+.btn {
   width: 100%;
-  height: 55px;
-  background-color: #9dd558;
-  border-radius: 18px;
-  border: 0;
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 500;
-  cursor: pointer;
-  transition: background-color 0.1s ease-in-out;
-  position: relative;
-
-  &:hover {
-    background-color: lighten(#9dd558, 10%);
-
-    img {
-      transform: translateX(5px);
-    }
-  }
-
-  &:active {
-    background-color: darken(#9dd558, 5%);
-  }
-
-  &:disabled {
-    background-color: #bebebe;
-    cursor: default;
-  }
-
-  img {
-    position: absolute;
-    right: 30px;
-    top: 20px;
-    transition: transform 0.2s ease-in-out;
-  }
 }
