--- a/src/pages/orders/orders.module.scss
+++ b/src/pages/orders/orders.module.scss
@@ -1,13 +1,20 @@
+.orders {
+}
+
 .order {
   display: grid;
-  grid-template-columns: auto 1fr repeat(2, auto);
   margin: 10px;
   padding: 5px 10px;
   grid-gap: 10px;
   align-items: center;
   border-radius: 5px;
+  grid-template-columns: 120px 1fr auto;
 
   border: 1px solid #0001;
+
+  &__id {
+    margin-bottom: 5px;
+  }
 
   &__del {
     cursor: pointer;
