--- a/src/app.scss
+++ b/src/app.scss
@@ -35,8 +35,12 @@ body {
   font-weight: 600;
 }
 
-.removeBtn {
+.remove-btn {
   cursor: pointer;
+  &:hover {
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.06);
+    transform: scale(1.03);
+  }
 }
 
 .greenBtn {
