--- a/src/components/page/page.module.scss
+++ b/src/components/page/page.module.scss
@@ -9,6 +9,11 @@
   margin-bottom: 40px;
 }
 
+.body {
+  display: grid;
+  grid-gap: 10px;
+}
+
 .title {
   display: grid;
   grid-auto-flow: column;
