--- a/src/components/page/page.module.scss
+++ b/src/components/page/page.module.scss
@@ -4,7 +4,9 @@
 
 .header {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-auto-flow: column;
+  justify-content: space-between;
+
   align-items: center;
   margin-bottom: 40px;
 }
@@ -17,6 +19,6 @@
 .title {
   display: grid;
   grid-auto-flow: column;
-  justify-content: space-between;
   align-items: center;
+  justify-content: start;
 }
