--- a/src/app.scss
+++ b/src/app.scss
@@ -21,18 +21,23 @@ body {
   // max-width: 1080px;
   // margin: 50px auto;
 }
-
-.spoiler__title,
 .header,
-.main {
-  padding: 40px;
+.main,
+.aside__title {
+  padding: 20px;
 }
 
-.spoiler__title,
+.aside__title,
 .main__title,
 .page__title-text {
   font-size: 2rem;
   font-weight: 600;
+}
+
+.header,
+.aside__title {
+  border-bottom: 1px solid #0001;
+  min-height: 90px;
 }
 
 .remove-btn {
