--- a/src/comps/aside/aside.module.scss
+++ b/src/comps/aside/aside.module.scss
@@ -1,6 +1,18 @@
 .container {
+  position: absolute;
+  right: -10px;
+  top: 40px;
+  // transform: translateX(calc(100% + 10px));
+}
+
+.wrapper {
+  position: fixed;
+  top: 40px;
+  // left: 0;
   width: 320px;
   padding: 10px;
+  margin-bottom: 30px;
+  max-height: calc(100vh - 80px);
 }
 
 .header {
@@ -20,4 +32,8 @@
   border-radius: 15px;
   padding: 5px;
   margin-bottom: 10px;
+}
+
+.items {
+  overflow: auto;
 }
