--- a/src/comps/layout/layout.module.scss
+++ b/src/comps/layout/layout.module.scss
@@ -1,12 +1,14 @@
-.container {
-  display: grid;
-  justify-content: center;
-  grid-auto-flow: column;
-  grid-gap: 10px;
+.wrapper {
+  margin: 0 auto;
+  max-width: 1100px;
+  // display: grid;
+  // justify-content: center;
+  // grid-template-columns: minmax(320px, 1100px);
   padding: 30px 0;
 }
+.container {
+  // max-width: 1000px;
+  position: relative;
 
-.main {
-  width: 800px;
-  padding: 10px;
+  margin-right: 330px;
 }
