--- a/src/comps/page/page.module.scss
+++ b/src/comps/page/page.module.scss
@@ -14,6 +14,8 @@
 .body {
   display: grid;
   grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, 220px);
+  justify-content: center;
 }
 
 .title {
