--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,8 @@
 @import './scss/normalise';
-
+:root {
+  --color-main: #9dd558;
+  --color-stroke: #f3f3f3;
+}
 * {
   font-family: 'Inter', sans-serif;
 }
@@ -36,7 +39,7 @@ body {
 
 .header,
 .aside__title {
-  border-bottom: 1px solid #0001;
+  border-bottom: 1px solid var(--color-main);
   min-height: 90px;
 }
 
