--- a/src/comps/card/card.module.scss
+++ b/src/comps/card/card.module.scss
@@ -1,8 +1,8 @@
 .card {
-  border: 1px solid #f8f8f8;
+  border: 1px solid var(--color-main);
   padding: 20px;
   width: 220px;
-  border-radius: 40px;
+  border-radius: 10px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   // cursor: pointer;
 
