--- a/src/comps/page/page.module.scss
+++ b/src/comps/page/page.module.scss
@@ -13,7 +13,7 @@
 
 .body {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 40px 25px;
   grid-template-columns: repeat(auto-fill, 220px);
   justify-content: center;
 }
