--- a/src/comps/layout/layout.module.scss
+++ b/src/comps/layout/layout.module.scss
@@ -7,10 +7,13 @@
   padding: 30px 0;
 }
 .container {
-  // max-width: 1000px;
+  transition: 0.4s ease-in-out 0.1s;
   position: relative;
 
   margin-right: 330px;
+  @media screen and (max-width: 1155px) {
+    margin-right: 0;
+  }
 }
 
 .top {
