--- a/src/app.scss
+++ b/src/app.scss
@@ -17,6 +17,10 @@ body {
   background-color: #eff6ff;
   padding: 0 10px;
   font-size: 16px;
+
+  @media screen and (max-width: 810px) {
+    padding: 0;
+  }
 }
 
 .wrapper {
@@ -29,8 +33,12 @@ body {
 
 .header,
 .main,
-.aside__title {
+.aside__title,
+.page__container {
   padding: 40px;
+  @media screen and (max-width: 810px) {
+    padding: 10px;
+  }
 }
 
 .aside__title,
@@ -41,9 +49,21 @@ body {
 }
 
 .header,
-.aside__title {
+.aside__header {
   border-bottom: 1px solid var(--color-main);
   min-height: 90px;
+}
+
+.main-card {
+  display: grid;
+  grid-gap: 40px 25px;
+  grid-template-columns: repeat(auto-fill, 220px);
+  justify-content: center;
+
+  @media screen and (max-width: 810px) {
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 160px);
+  }
 }
 
 .remove-btn {
