--- a/src/comps/aside/aside.module.scss
+++ b/src/comps/aside/aside.module.scss
@@ -7,20 +7,16 @@
 .wrapper {
   position: fixed;
   top: 30px;
-
   width: 320px;
-
   padding: 10px;
-
   transition: all 0.1s ease-in, transform 0.4s ease-in-out 0.1s;
 
-  // display: grid;
-  // grid-template-rows: 1fr auto;
   @media screen and (max-width: 1155px) {
     top: 0;
     height: 100%;
     padding-bottom: 20vh;
   }
+
   @media screen and (min-width: 1155px) {
     margin-bottom: 30px;
     max-height: calc(100vh - 60px);
@@ -39,9 +35,19 @@
 
 .title {
   margin-bottom: 40px;
-  border-bottom: 1px solid #0001;
   display: grid;
   align-content: center;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-gap: 50px;
+}
+
+.close {
+  display: none;
+
+  @media screen and (max-width: 1155px) {
+    display: block;
+  }
 }
 
 .item {
