--- a/src/comps/card/card.module.scss
+++ b/src/comps/card/card.module.scss
@@ -5,11 +5,16 @@
   justify-items: center;
   border: 1px solid var(--color-main);
   padding: 15px;
-  width: 220px;
+  // width: 100px;
   height: 280px;
   border-radius: 10px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   // cursor: pointer;
+
+  @media screen and (max-width: 810px) {
+    padding: 10px;
+    height: 215px;
+  }
 
   &:hover {
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.06);
@@ -20,6 +25,9 @@
     font-weight: 400;
     font-size: 14px;
     padding: 1.5rem 0;
+    @media screen and (max-width: 810px) {
+      padding: 0.5rem 0;
+    }
   }
 
   .favorite {
@@ -40,6 +48,12 @@
 
 .img {
   object-fit: cover;
+  width: 170px;
+  height: 140px;
+  @media screen and (max-width: 810px) {
+    width: 120px;
+    height: 100px;
+  }
 }
 
 .footer {
