--- a/src/comps/cart-respons/cartResponce.module.scss
+++ b/src/comps/cart-respons/cartResponce.module.scss
@@ -32,6 +32,10 @@
   @media screen and (max-width: 1155px) {
     display: grid;
   }
+  @media screen and (max-width: 810px) {
+    width: 100%;
+    border-top-right-radius: 10px;
+  }
 
   &::before {
     content: '';
