--- a/src/comps/header/header.module.scss
+++ b/src/comps/header/header.module.scss
@@ -8,6 +8,12 @@
   background-color: #fff;
   border-radius: 8px;
 
+  @media screen and (max-width: 810px) {
+    top: 0;
+    flex-direction: column;
+    gap: 20px;
+  }
+
   &__link {
     display: flex;
     align-items: center;
