--- a/src/comps/layout/layout.module.scss
+++ b/src/comps/layout/layout.module.scss
@@ -5,6 +5,11 @@
   // justify-content: center;
   // grid-template-columns: minmax(320px, 1100px);
   padding: 30px 0;
+
+  @media screen and (max-width: 810px) {
+    padding-top: 0;
+    padding-bottom: 70px;
+  }
 }
 .container {
   transition: 0.4s ease-in-out 0.1s;
