--- a/src/comps/order-card/order.module.scss
+++ b/src/comps/order-card/order.module.scss
@@ -1,4 +1,9 @@
-.body {
+.cards {
+  display: grid;
+  grid-gap: 10px;
+}
+
+.card {
   display: grid;
   padding: 5px 10px;
   grid-gap: 10px;
@@ -7,6 +12,12 @@
   grid-template-columns: 120px 1fr auto;
 
   border: 1px solid #0001;
+  @media screen and (max-width: 810px) {
+    grid-template-columns: unset;
+    grid-template-areas:
+      'one  two'
+      'three three';
+  }
 
   &__id {
     margin-bottom: 5px;
@@ -16,6 +27,9 @@
 .rows {
   display: grid;
   grid-gap: 5px;
+  @media screen and (max-width: 810px) {
+    grid-area: three;
+  }
 }
 
 .row {
@@ -32,5 +46,11 @@
   &:hover {
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.06);
     transform: translateY(-2px);
+  }
+}
+
+.remove {
+  @media screen and (max-width: 810px) {
+    justify-self: end;
   }
 }
