--- a/src/comps/header/header.module.scss
+++ b/src/comps/header/header.module.scss
@@ -33,17 +33,21 @@
     display: grid;
     grid-auto-flow: column;
     grid-gap: 20px;
-
-    div {
-      display: grid;
-      grid-auto-flow: column;
+    @media screen and (max-width: 1155px) {
+      grid-auto-flow: unset;
+      grid-template-columns: repeat(3, 1fr);
       grid-gap: 10px;
     }
   }
 }
 
 .cartLink {
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 10px;
   @media screen and (max-width: 1155px) {
     cursor: pointer;
+    grid-auto-flow: unset;
+    justify-items: center;
   }
 }
