--- a/src/comps/aside/aside.module.scss
+++ b/src/comps/aside/aside.module.scss
@@ -2,6 +2,9 @@
   position: absolute;
   right: -10px;
   z-index: 1000;
+  @media screen and (max-width: 1155px) {
+    right: 0;
+  }
 }
 
 .wrapper {
